- Issue #1393 - Adding collapse/expand funcitonality to individual article blocks - Adding collapse/expand all functionality

--- a/assets/html/scss/documenter/components/_docstring.scss
+++ b/assets/html/scss/documenter/components/_docstring.scss
@@ -21,6 +21,10 @@
       background-color: transparent;
     }
 
+    .docstring-article-toggle-button {
+      padding: 0.2rem 0.2rem 0.2rem 0;
+    }
+
     .docstring-binding {
       margin-right: 0.3em;
     }
